added House-Allies dialog .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -550,10 +550,10 @@ BEGIN
     EDITTEXT        IDC_P5,155,78,65,12,ES_AUTOHSCROLL
 END
 
-IDD_HOUSES DIALOG 0, 0, 303, 207
+IDD_HOUSES DIALOGEX 0, 0, 303, 207
 STYLE DS_SETFONT | DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "Houses"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
     LTEXT           "DESC [quite long]",IDC_DESC,7,5,290,43
     COMBOBOX        IDC_HOUSES,77,65,220,125,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
@@ -562,17 +562,17 @@ BEGIN
     PUSHBUTTON      "Standard houses",IDC_PREPAREHOUSES,75,82,70,15
     PUSHBUTTON      "Delete house",IDC_DELETEHOUSE,150,82,70,15
     LTEXT           "IQ:",IDC_LIQ,10,105,40,10
-    COMBOBOX        IDC_IQ,55,105,70,70,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_IQ,64,105,70,70,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Edge:",IDC_LEDGE,10,120,40,10
-    COMBOBOX        IDC_EDGE,55,120,70,65,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_EDGE,64,120,70,65,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Side",IDC_LSIDE,10,135,40,10
-    COMBOBOX        IDC_SIDE,55,135,70,65,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_SIDE,64,134,70,65,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Color",IDC_LCOLOR,10,150,40,10
-    COMBOBOX        IDC_COLOR,55,150,70,150,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Allies:",IDC_LALLIES,10,165,40,10
-    EDITTEXT        IDC_ALLIES,55,165,70,12,ES_AUTOHSCROLL
-    LTEXT           "Credits (x100):",IDC_LCREDITS,10,181,40,17
-    EDITTEXT        IDC_CREDITS,55,179,70,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COLOR,64,149,70,150,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Allies:",IDC_LALLIES,7,179,40,10
+    EDITTEXT        IDC_ALLIES,64,179,205,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Credits (x100):",IDC_LCREDITS,7,164,60,15
+    EDITTEXT        IDC_CREDITS,64,164,70,12,ES_AUTOHSCROLL
     LTEXT           "Acts like:",IDC_LACTSLIKE,150,105,69,14
     COMBOBOX        IDC_ACTSLIKE,227,105,70,50,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Nodecount:",IDC_LNODECOUNT,150,119,68,15
@@ -581,11 +581,28 @@ BEGIN
     COMBOBOX        IDC_TECHLEVEL,227,135,70,135,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Build activity (%):",IDC_LBUILDACTIVITY,150,150,66,17
     COMBOBOX        IDC_PERCENTBUILT,227,150,70,50,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Player control:",IDC_LPLAYERCONTROL,150,166,70,20
-    COMBOBOX        IDC_PLAYERCONTROL,227,166,70,50,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Player control:",IDC_LPLAYERCONTROL,150,164,70,15
+    COMBOBOX        IDC_PLAYERCONTROL,227,164,70,50,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Human Player:",IDC_LPLAYER,7,48,65,16
     COMBOBOX        IDC_HUMANPLAYER,77,49,220,70,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "",IDC_STATIC,6,98,293,102
+    PUSHBUTTON      "...",IDC_HOUSES_CHANGE_ALLIES,271,179,26,14
+END
+
+IDD_HOUSES_ALLIES DIALOGEX 0, 0, 309, 176
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Alliance Editor"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,7,155,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,252,155,50,14
+    LTEXT           "Enemies",IDC_STATIC,7,7,28,13,SS_SUNKEN
+    LTEXT           "Allies",IDC_STATIC,281,7,21,11,SS_SUNKEN
+    LISTBOX         IDC_HOUSE_LIST_ENEMIES,7,19,125,129,LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_HOUSE_LIST_ALLIES,177,19,125,129,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "->",IDC_HOUSE_ALLIES_ADD,137,57,36,14
+    PUSHBUTTON      "<-",IDC_HOUSE_ALLIES_REMOVE,137,78,36,14
+    EDITTEXT        IDC_HOUSE_ALLIES_VALUES,69,155,167,14,ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP,WS_EX_STATICEDGE
 END
 
 IDD_AIRCRAFT DIALOG 0, 0, 232, 130
@@ -1789,6 +1806,19 @@ BEGIN
     END
 
     IDD_HOUSES, DIALOG
+    BEGIN
+        VERTGUIDE, 7
+        VERTGUIDE, 64
+        VERTGUIDE, 297
+        HORZGUIDE, 105
+        HORZGUIDE, 120
+        HORZGUIDE, 134
+        HORZGUIDE, 149
+        HORZGUIDE, 164
+        HORZGUIDE, 179
+    END
+
+    IDD_HOUSES_ALLIES, DIALOG
     BEGIN
     END
 
@@ -3593,6 +3623,16 @@ END
 #endif
 
 IDD_TASKFORCES AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_HOUSES AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_HOUSES_ALLIES AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
