implemented house allies translation .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -596,8 +596,8 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,7,155,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,252,155,50,14
-    LTEXT           "Enemies",IDC_STATIC,7,7,28,13,SS_SUNKEN
-    LTEXT           "Allies",IDC_STATIC,281,7,21,11,SS_SUNKEN
+    LTEXT           "Enemies",IDC_HOUSE_ALLIES_T_ENEMIES,7,7,28,13,SS_SUNKEN
+    LTEXT           "Allies",IDC_HOUSE_ALLIES_T_ALLIES,281,7,21,11,SS_SUNKEN
     LISTBOX         IDC_HOUSE_LIST_ENEMIES,7,19,125,129,LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LISTBOX         IDC_HOUSE_LIST_ALLIES,177,19,125,129,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "->",IDC_HOUSE_ALLIES_ADD,137,57,36,14
