--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1300,8 +1300,8 @@ HousesIQ=IQ:
 HousesEdge=地图边界:
 HousesSide=所属:
 HousesColor=颜色:
-HousesAllies=同盟国:
-HousesAlliesHelp=列出所有联盟国，如：GDI, Nod, Neutral
+HousesAllies=盟友:
+HousesAlliesHelp=列出所有联盟国，如：盟军，苏军，平民
 HousesCredits=金钱(x100):
 HousesActsLike=Acts like
 HousesNodeCount=节点总计:
@@ -1311,6 +1311,9 @@ HousesPlayerControl=游戏者控制:
 HousesPrepareHouses=标准参战方
 HousesAddHouse=新建参战方
 HousesDeleteHouse=删除参战方
+HouseAlliesCaption=敌我关系编辑器
+HouseAlliesEnemies=敌对方
+HouseAlliesAllies=友方
 
 ; loading dialog
 LoadLoadRules=正在载入 rules ...
