implemented basic translation .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -895,31 +895,31 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "AI Trigger Types"
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    LTEXT           "AI Trigger:",IDC_STATIC,7,7,43,11
+    LTEXT           "AI Trigger:",IDC_AITRIGGER_T_TYPE,7,7,43,11
     COMBOBOX        IDC_AITRIGGERTYPE,60,7,236,307,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Name:",IDC_STATIC,7,63,43,11
+    LTEXT           "Name:",IDC_AITRIGGER_T_NAME,7,63,43,11
     EDITTEXT        IDC_NAME,60,64,94,13,ES_AUTOHSCROLL
-    LTEXT           "Teamtype #1:",IDC_STATIC,7,80,43,17
+    LTEXT           "Teamtype #1:",IDC_AITRIGGER_T_TEAM1,7,80,52,17
     COMBOBOX        IDC_TEAMTYPE1,60,81,236,81,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "House:",IDC_STATIC,165,64,50,16
+    LTEXT           "House:",IDC_AITRIGGER_T_HOUSE,165,64,50,16
     COMBOBOX        IDC_OWNER,220,64,76,207,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Teamtype #2:",IDC_STATIC,7,98,43,17
+    LTEXT           "Teamtype #2:",IDC_AITRIGGER_T_TEAM2,7,98,49,17
     COMBOBOX        IDC_TEAMTYPE2,60,98,235,81,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Techlevel:",IDC_STATIC,280,206,8,11,NOT WS_VISIBLE
     COMBOBOX        IDC_FLAG1,288,222,16,56,CBS_DROPDOWN | NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Type:",IDC_STATIC,6,44,53,17
+    LTEXT           "Type:",IDC_AITRIGGER_T_TTYPE,6,44,53,17
     COMBOBOX        IDC_FLAG2,60,45,235,71,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Data:",IDC_DATALABEL,265,204,8,13,NOT WS_VISIBLE
     COMBOBOX        IDC_DATA,287,222,16,128,CBS_DROPDOWN | CBS_AUTOHSCROLL | NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Weight:",IDC_STATIC,6,150,33,11
+    LTEXT           "Weight:",IDC_AITRIGGER_T_WEIGHT,6,150,50,11
     EDITTEXT        IDC_FLOAT1,59,148,56,13,ES_AUTOHSCROLL
-    LTEXT           "MinWeight:",IDC_STATIC,6,165,38,11
+    LTEXT           "MinWeight:",IDC_AITRIGGER_T_WEIGHT_MIN,6,165,50,11
     EDITTEXT        IDC_FLOAT2,59,164,56,13,ES_AUTOHSCROLL
-    LTEXT           "MaxWeight:",IDC_STATIC,125,165,40,11
+    LTEXT           "MaxWeight:",IDC_AITRIGGER_T_WEIGHT_MAX,125,165,40,11
     EDITTEXT        IDC_FLOAT3,180,164,54,13,ES_AUTOHSCROLL
     LTEXT           "MinDiff:",IDC_STATIC,279,222,8,12,NOT WS_VISIBLE
     EDITTEXT        IDC_FLAG4,291,222,8,12,ES_AUTOHSCROLL | NOT WS_VISIBLE
-    LTEXT           "Multi-Side:",IDC_STATIC,7,115,33,12
+    LTEXT           "Multi-Side:",IDC_AITRIGGER_T_SIDE,7,115,49,12
     PUSHBUTTON      "Add",IDC_ADD,140,23,50,13
     PUSHBUTTON      "Clone",IDC_AITRIGGER_COPY,190,23,50,13
     PUSHBUTTON      "Delete",IDC_DELETE,240,23,50,13
@@ -930,13 +930,13 @@ BEGIN
     CONTROL         "Base defense",IDC_BASEDEFENSE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,116,67,13
     CONTROL         "Available in Skirmish",IDC_SKIRMISH,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,199,116,85,14
     COMBOBOX        IDC_MULTISIDE,60,116,56,63,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Unittype (X):",IDC_STATIC,171,200,51,10
+    LTEXT           "Unittype (X):",IDC_AITRIGGER_T_UNITTYPE,171,200,51,10
     COMBOBOX        IDC_UNITTYPE,171,212,125,255,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Condition:",IDC_STATIC,8,200,50,11
+    LTEXT           "Condition:",IDC_AITRIGGER_T_CONDITION,8,200,50,11
     COMBOBOX        IDC_CONDITION,8,212,95,82,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_NUMBER,109,212,54,13,ES_AUTOHSCROLL
-    LTEXT           "Number (N):",IDC_STATIC,110,200,56,11
-    LTEXT           "Additional parameters for the appropiate AI Trigger Types:",IDC_STATIC,6,188,295,12
+    LTEXT           "Number (N):",IDC_AITRIGGER_T_NUM,110,200,56,11
+    LTEXT           "Additional parameters for the appropiate AI Trigger Types:",IDC_AITRIGGER_T_ADDITIONAL,6,188,295,12
 END
 #endif
 
