completed combox content translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1371,6 +1371,13 @@ AITriggerAdditional=条件参数细节定义
 AITriggerCondition=操作数:
 AITriggerNumber=数量(N):
 AITriggerUnitType=单位类型(X):
+0 None=0 不限制
+less than=< 小于
+less than or equal to=<= 小于等于
+equal to=== 等于
+greater than or equal to=>= 大于等于
+greater than=> 大于
+not equal to=!= 不等于
 
 ; taskforces
 TaskforcesCaption=成员组
