Feature/AI Trigger Editor (#80)

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1347,6 +1347,38 @@ TriggerOptionHouse=所属方：
 TriggerOptionAttachedTrigger=关联的触发
 TriggerOptionDisableTip=被禁止的触发必须由其它触发激活后才能继续运作
 
+AITriggerCaption=AI触发编辑
+AITriggerAdd=添加
+AITriggerCopy=复制
+AITriggerDelete=删除
+AITriggerEnabled=启用
+AITriggerType=AI触发:
+AITriggerCategory=条件类型:
+AITriggerName=触发名称:
+AITriggerHouse=限定所属:
+AITriggerTeamType1=小队类型 #1:
+AITriggerTeamType2=小队类型 #2:
+AITriggerSide=限定阵营:
+AITriggerBaseDefense=防御基地?
+AITriggerSkirmishAvailable=多人模式有效?
+AITriggerEasyEnable=简单生效?
+AITriggerMediumEnable=中等生效?
+AITriggerHardEnable=困难生效?
+AITriggerWeightInitial=初始权重:
+AITriggerWeightMin=最低权重:
+AITriggerWeightMax=最高权重:
+AITriggerAdditional=条件参数细节定义
+AITriggerCondition=操作数:
+AITriggerNumber=数量(N):
+AITriggerUnitType=单位类型(X):
+0 None=0 不限制
+less than=< 小于
+less than or equal to=<= 小于等于
+equal to=== 等于
+greater than or equal to=>= 大于等于
+greater than=> 大于
+not equal to=!= 不等于
+
 ; taskforces
 TaskforcesCaption=成员组
 TaskforcesType=成员组类型：
