TriggerEvent sub dialog translation .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -1197,19 +1197,19 @@ IDD_TRIGGEREVENTS DIALOGEX 0, 0, 365, 204
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    LTEXT           "Current event:",IDC_STATIC,6,6,64,11
+    LTEXT           "Current event:",IDC_EVENT_CUR_TXT,6,6,64,11
     COMBOBOX        IDC_EVENT,72,6,150,79,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "New event",IDC_NEWEVENT,233,6,61,14
     PUSHBUTTON      "Delete event",IDC_DELETEEVENT,300,6,61,14
-    GROUPBOX        "Event options",IDC_STATIC,6,19,355,178
-    LTEXT           "Event type:",IDC_STATIC,14,32,57,12
+    GROUPBOX        "Event options",IDC_EVENT_OPT_TXT,6,19,355,178
+    LTEXT           "Event type:",IDC_EVENT_TYPE_TXT,14,32,57,12
     COMBOBOX        IDC_EVENTTYPE,72,30,282,184,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_EVENTDESCRIPTION,14,48,340,26,ES_MULTILINE | ES_READONLY | WS_VSCROLL
-    LTEXT           "Event parameters:",IDC_STATIC,14,79,74,10
+    LTEXT           "Event parameters:",IDC_EVENT_PARAM_TXT,14,79,74,10
     LISTBOX         IDC_PARAMETER,14,93,159,96,LBS_SORT | LBS_USETABSTOPS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
-    LTEXT           "Parameter value:",IDC_STATIC,185,79,118,10
+    LTEXT           "Parameter value:",IDC_EVENT_VAL_TXT,185,79,118,10
     COMBOBOX        IDC_PARAMVALUE,185,93,169,125,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_NOINTEGRALHEIGHT | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Select the event type first, then set all parameters.",IDC_STATIC,185,110,169,25
+    LTEXT           "Select the event type first, then set all parameters.",IDC_EVENT_DESC,185,110,169,25
 END
 
 IDD_TRIGGERACTIONS DIALOGEX 0, 0, 365, 202
