--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1346,6 +1346,10 @@ TriggerOptionName=名称：
 TriggerOptionHouse=所属方：
 TriggerOptionAttachedTrigger=关联的触发
 TriggerOptionDisableTip=被禁止的触发必须由其它触发激活后才能继续运作
+TriggerOptionDisabled=禁止
+TriggerOptionEasy=简单
+TriggerOptionMedium=中等
+TriggerOptionHard=困难
 TriggerEventCurrent=当前事件:
 TriggerEventNew=新建
 TriggerEventDelete=删除
@@ -1354,7 +1358,6 @@ TriggerEventType=事件类型:
 TriggerEventParams=事件参数:
 TriggerEventParamValue=参数值:
 TriggerEventDesc=先选中事件类型，然后设置对应数值
-
 AITriggerCaption=AI触发编辑
 AITriggerAdd=添加
 AITriggerCopy=复制
