trigger action translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1358,6 +1358,15 @@ TriggerEventType=事件类型:
 TriggerEventParams=事件参数:
 TriggerEventParamValue=参数值:
 TriggerEventDesc=先选中事件类型，然后设置对应数值
+TriggerActionCurrent=当前行为:
+TriggerActionNew=新建
+TriggerActionDelete=删除
+TriggerActionOptions=行为选项
+TriggerActionType=行为类型:
+TriggerActionParams=行为参数:
+TriggerActionValue=参数值:
+TriggerActionDesc=先选中行为类型，然后设置对应数值
+
 AITriggerCaption=AI触发编辑
 AITriggerAdd=添加
 AITriggerCopy=复制
