--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -1216,19 +1216,19 @@ IDD_TRIGGERACTIONS DIALOGEX 0, 0, 365, 202
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    LTEXT           "Current action:",IDC_STATIC,6,6,58,11
+    LTEXT           "Current action:",IDC_ACTION_CUR_TXT,6,6,58,11
     COMBOBOX        IDC_ACTION,72,6,149,79,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "New action",IDC_NEWACTION,233,6,60,14
     PUSHBUTTON      "Delete action",IDC_DELETEACTION,301,6,59,14
-    GROUPBOX        "Action options",IDC_STATIC,6,20,354,174
-    LTEXT           "Action type:",IDC_STATIC,14,32,57,12
+    GROUPBOX        "Action options",IDC_ACTION_OPT_TXT,6,20,354,174
+    LTEXT           "Action type:",IDC_ACTION_TYPE_TXT,14,32,57,12
     COMBOBOX        IDC_ACTIONTYPE,72,30,282,184,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_ACTIONDESCRIPTION,14,48,340,26,ES_MULTILINE | ES_READONLY | WS_VSCROLL
-    LTEXT           "Action parameters:",IDC_STATIC,14,79,74,10
+    LTEXT           "Action parameters:",IDC_ACTION_PARAM_TXT,14,79,74,10
     LISTBOX         IDC_PARAMETER,14,93,160,94,LBS_SORT | LBS_USETABSTOPS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
-    LTEXT           "Parameter value:",IDC_STATIC,186,79,118,10
+    LTEXT           "Parameter value:",IDC_ACTION_VAL_TXT,186,79,118,10
     COMBOBOX        IDC_PARAMVALUE,186,92,168,125,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_NOINTEGRALHEIGHT | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Select the event type first, then set all parameters.",IDC_STATIC,186,110,168,25
+    LTEXT           "Select the event type first, then set all parameters.",IDC_ACTION_DESC,186,110,168,25
 END
 
 IDD_GLOBALS DIALOG 0, 0, 186, 79
