added missing translation for trigger option repeat option combobox .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1367,6 +1367,10 @@ TriggerActionParams=行为参数:
 TriggerActionValue=参数值:
 TriggerActionDesc=先选中行为类型，然后设置对应数值
 
+0 - Standard=0 - 单次
+1 - All Attached=1 - 所有关联的
+2 - Repeating=2 - 重复
+
 AITriggerCaption=AI触发编辑
 AITriggerAdd=添加
 AITriggerCopy=复制
