trigger message box translations .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -679,6 +679,7 @@ LoadVersion=Version:
 LoadInitDDraw=Initializing Direct Draw 6
 LoadInitPics=Loading Graphics
 LoadExtractStdMixFiles=Opening std. MIX files (may take some time)
+TriggerDeleteTip=If you want to delete all attached tags, too, press 'Yes'.\nIf you don´t want to delete these tags, press 'No'.\nIf you want to cancel deletion of the trigger, press 'Cancel'.\n\nNote: CellTags will never be deleted using this function
 
 ; iso view
 IsoCaption=Map view
@@ -1341,6 +1342,7 @@ TriggerNew=新建
 TriggerPlaceOnMap=放置单元标记
 TriggerClone=复制
 TriggerDelete=删除
+TriggerDeleteTip=选择“确定”删除所有相关联的标签\n选择“否”保留所有关联的标签\n选择“取消”放弃删除\n\n注意：触发被删除后，关联的单元标记不会受到影响，仍然残留
 TriggerOptionType=类型（会同步至全部关联标记）
 TriggerOptionName=名称：
 TriggerOptionHouse=所属方：
@@ -1370,6 +1372,11 @@ TriggerActionDesc=先选中行为类型，然后设置对应数值
 0 - Standard=0 - 单次
 1 - All Attached=1 - 所有关联的
 2 - Repeating=2 - 重复
+Delete trigger=删除整个触发 
+Do you really want to delete this event?=确定删除当前事件吗？
+Delete event=删除事件 
+Do you really want to delete this action?=确定删除当前的行为吗？
+Delete action=删除行为 
 
 AITriggerCaption=AI触发编辑
 AITriggerAdd=添加
