graph loading dialog translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1335,6 +1335,9 @@ LoadInitDDraw=初始化 Direct Draw 6 ...
 LoadInitPics=正在载入图像...
 LoadExtractStdMixFiles=正在打开 std.mix 文件(可能需要一些时间)
 
+LoadingDialogCaption=正在刷新图像
+LoadingDialogDesc=重绘屏幕图像中，马上就好
+
 ; trigger editor
 TriggerDesc=选择当前触发：
 TriggerName=nam
