special flags translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1429,6 +1429,23 @@ greater than or equal to=>= 大于等于
 greater than=> 大于
 not equal to=!= 不等于
 
+; special flags
+SpecialFlagsCaption=特殊设定
+SpecialFlagsDesc=这些设定在特定条件下才有效果，通常与剧情或其他平台功能配合使用
+SpecialFlagsTiberiumGrows=矿脉生长:
+SpecialFlagsTiberiumSpread=矿脉蔓延:
+SpecialFlagsTiberiumExplosive=矿脉爆炸:
+SpecialFlagsTiberiumBridgeDestroyable=桥梁可摧毁:
+SpecialFlagsMCVRedeploy=基地车可重新部署:
+SpecialFlagsInitialVeteran=初始单位精英级:
+SpecialFlagsFixedAlliance=结盟状态不可变:
+SpecialFlagsHarvesterImmune=采矿车无敌:
+SpecialFlagsFogOfWar=战场生长型迷雾:
+SpecialFlagsInert=武器伤害无效化:
+SpecialFlagsIonStoms=TS离子风暴效果:
+SpecialFlagsMeteorites=陨石效果(无效):
+SpecialFlagsVisceroids=TS特殊泰矿生物(无效):
+
 ; taskforces
 TaskforcesCaption=成员组
 TaskforcesType=成员组类型：
