--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1278,17 +1278,17 @@ MapHeight=高度：
 MapChange=应用更改
 
 ; lighting settings dialog
-LightingDesc=光照设置能自定义游戏内的地形（游戏内看起来）的颜色，还能将地图变得非常明亮或者非常黑暗。不过请注意，错误的光照设置可能导致玩家看不见地图中的物品
+LightingDesc=光照设置能调整地形亮度和颜色亮度比例，可以很亮也可以很暗。注意，不合适的参数会导致玩家看不清场景。物体亮度不受这个设置影响
 LightingNormal=常规环境
-LightingNormalAmbient=环境照明：
-LightingNormalLevel=等级
+LightingNormalAmbient=基础亮度：
+LightingNormalLevel=级数细分：
 LightingNormalRed=红色：
 LightingNormalGreen=绿色：
 LightingNormalBlue=蓝色：
 LightingIonStorm=发生离子风暴时
 LightingWeatherStorm=发生闪电风暴时
-LightingWeatherStormAmbient=环境照明：
-LightingWeatherStormLevel=等级
+LightingWeatherStormAmbient=基础亮度：
+LightingWeatherStormLevel=级数细分：
 LightingWeatherStormRed=红色：
 LightingWeatherStormGreen=绿色：
 LightingWeatherStormBlue=蓝色：
