Local variables translation .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -1231,16 +1231,16 @@ BEGIN
     LTEXT           "Select the event type first, then set all parameters.",IDC_ACTION_DESC,186,110,168,25
 END
 
-IDD_GLOBALS DIALOG 0, 0, 186, 79
+IDD_GLOBALS DIALOGEX 0, 0, 186, 79
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Local Variables"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    LTEXT           "Select variable:",IDC_STATIC,7,7,60,12
+    LTEXT           "Select variable:",IDC_LOCAL_VAR_CUR_TXT,7,7,60,12
     COMBOBOX        IDC_GLOBAL,7,19,172,92,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Description:",IDC_STATIC,7,41,44,12
+    LTEXT           "Description:",IDC_DESC,7,41,44,12
     EDITTEXT        IDC_DESCRIPTION,56,41,123,13,ES_AUTOHSCROLL
-    LTEXT           "Preset value:",IDC_STATIC,7,60,45,11
+    LTEXT           "Preset value:",IDC_LOCAL_VAR_INIT_TXT,7,60,45,11
     COMBOBOX        IDC_VALUE,57,59,122,55,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
@@ -1975,6 +1975,10 @@ BEGIN
         HORZGUIDE, 6
         HORZGUIDE, 74
         HORZGUIDE, 79
+    END
+
+    IDD_GLOBALS, DIALOG
+    BEGIN
     END
 
     "IDD_TSOPTIONS$(TS_MODE)", DIALOG
@@ -2831,15 +2835,6 @@ BEGIN
     0
 END
 
-IDD_GLOBALS DLGINIT
-BEGIN
-    IDC_VALUE, 0x403, 10, 0
-0x2030, 0x202d, 0x6c43, 0x6165, 0x0072, 
-    IDC_VALUE, 0x403, 8, 0
-0x2031, 0x202d, 0x6553, 0x0074, 
-    0
-END
-
 #if defined(APSTUDIO_INVOKED) || defined(RA2_MODE)
 #if defined(APSTUDIO_INVOKED)
 IDD_TEAMTYPES$(RA2_MODE) DLGINIT
@@ -3624,6 +3619,11 @@ END
 #endif
 
 IDD_DYNAMICLOAD AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_GLOBALS AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
