--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1397,6 +1397,13 @@ Delete event=删除事件
 Do you really want to delete this action?=确定删除当前的行为吗？
 Delete action=删除行为 
 
+LocalVariableCaption=局部变量
+LocalVariableCurrent=当前变量
+LocalVariableDesc=名称:
+LocalVariableInitValue=初始值:
+0 - Clear=0 - 假
+1 - Set=1 - 真
+
 AITriggerCaption=AI触发编辑
 AITriggerAdd=添加
 AITriggerCopy=复制
