--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1397,6 +1397,19 @@ Delete event=删除事件
 Do you really want to delete this action?=确定删除当前的行为吗？
 Delete action=删除行为 
 
+TagsCaption=触发标签
+TagsDesc=触发标签和触发事件搭配使用，触发事件直接或者间接和标签进行关联才能生效。
+TagsCurrent=当前标签
+TagsAdd=添加
+TagsDelete=删除
+TagsName=名称:
+TagsRepeat=重复方式:
+TagsTrigger=关联触发:
+TagsExpaination=新建触发事件的时候会自动创建一个对应的标签，但你可以将其删除。\n重复方式为“1 - 所有关联实体”时，意味着所有关联这个标记的物体都满足对应触发条件后才算条件满足。
+0 - Make the trigger work only once=0 - 一次性
+1 - All entities attached=1 - 所有关联实体
+2 - Make the trigger repeating=2 - 持续生效
+
 LocalVariableCaption=局部变量
 LocalVariableCurrent=当前变量
 LocalVariableDesc=名称:
