--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -681,6 +681,8 @@ LoadInitPics=Loading Graphics
 LoadExtractStdMixFiles=Opening std. MIX files (may take some time)
 TriggerDeleteTip=If you want to delete all attached tags, too, press 'Yes'.\nIf you don´t want to delete these tags, press 'No'.\nIf you want to cancel deletion of the trigger, press 'Cancel'.\n\nNote: CellTags will never be deleted using this function
 
+TaskforceDeleteMsgDesc=Are you sure to delete the selected task force? If you delete it, make sure to eliminate ANY references to this task force in team-types.
+
 ; iso view
 IsoCaption=Map view
 
@@ -1481,6 +1483,8 @@ TaskforcesCopyUnit=复制
 TaskforcesDeleteUnit=删除
 TaskforcesUnitNumber=单位数量：
 TaskforcesUnitType=单位类型：
+Delete task force=删除成员组记录　　　
+TaskforceDeleteMsgDesc=确定删除选定的成员组吗?删除之后别忘了清理所有引用这个成员组的小队！
 
 ; team scripts
 ScriptTypesAddScript=添加
