'Generate Standard Houses" translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -661,6 +661,8 @@ HousesPlayerControl=Player control:
 HousesPrepareHouses=Standard houses
 HousesAddHouse=New house
 HousesDeleteHouse=Delete house
+HouseDuplicatedCreatingTip=There are already houses in your map. You need to delete these first.
+HouseDuplicatedCreatingCaption=Standard players creation failure
 
 ; loading dialog
 LoadLoadRules=Loading rules
@@ -1333,6 +1335,8 @@ HousesDeleteHouse=删除参战方
 HouseAlliesCaption=敌我关系编辑器
 HouseAlliesEnemies=敌对方
 HouseAlliesAllies=友方
+HouseDuplicatedCreatingTip=地图中已经有所属方存在了，需要全部删掉才能再创建标准参战方。
+HouseDuplicatedCreatingCaption=创建标准参战方失败　　　　
 
 ; loading dialog
 LoadLoadRules=正在载入 rules ...
