AI trigger 'trigger type' translated .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1454,6 +1454,15 @@ equal to=== 等于
 greater than or equal to=>= 大于等于
 greater than=> 大于
 not equal to=!= 不等于
+-1 None=-1 无效
+0 Enemy owns (CONDITION) N of type X=0 - 敌方拥有N个某物体
+1 House owns (CONDITION) N of type X=1 - 己方拥有N个某物体
+2 Enemy: Yellow power=2 - 敌方电量为黄色
+3 Enemy: Red power=3 - 敌方电量为红色
+4 Enemy owns (CONDITION) N money=4 - 敌方金钱数额达到
+5 Iron curtain near ready=5 - 铁幕装置即将待命
+6 Chronosphere near ready=6 - 超时空传送即将待命
+7 Neutral owns (CONDITION) N of type X=7 - 中立方拥有N个某物体
 
 ; special flags
 SpecialFlagsCaption=特殊设定
