--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -546,6 +546,16 @@ TipDialogShowAtStartup=Show tips at program start
 TipDialogClose=Close
 TipDialogCaption=Tip of the day
 
+; Options
+OptionsCaption=Options
+OptionsDesc=Red Alert 2 EXE (make sure its in the correct path)
+OptionsBrowse=Browse
+OptionsLanguage=Language / Sprache:
+OptionsSupportSettings=Support settings
+OptionsSupportMissionsAndMods=Support mission disks and mods (recommended)
+OptionsSupportOriginalRA2Only=Only support original Red Alert 2
+OptionsPreferFA2TheaterSettings=Prefer FinalAlert 2 theater INI files
+
 ; main dialog strings
 MainDialogCaption=%9
 MainDialogCaptionRA2=%9
@@ -1122,6 +1132,16 @@ TipDialogNext=下一提示
 TipDialogShowAtStartup=启动时显示
 TipDialogClose=关闭
 TipDialogCaption=您知道吗
+
+; options
+OptionsCaption=基本选项
+OptionsDesc=游戏路径，通常是ra2md.exe所在位置
+OptionsBrowse=浏览
+OptionsLanguage=语言:
+OptionsSupportSettings=功能集
+OptionsSupportMissionsAndMods=任务包及MOD扩展 (首选)
+OptionsSupportOriginalRA2Only=仅原版游戏
+OptionsPreferFA2TheaterSettings=优选地图编辑器地形设定
 
 ; menu strings
 File=文件
