added house deletion warning .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1038,10 +1038,6 @@ Err_CreateErr=不能建立窗口，你应该先关闭其它窗口。
 MainDialogExitQuestion=确认要退出程序吗？所做的修改将不能被保存！
 MainDialogExitQuestionCap=退出 %9
 AttachMapToShell=.map 和/或r .mpr 文件当前与其他程序相关联。你想要双击时用 %9 打开的所有的 .map 和 .mpr 文件吗？
-AddHouse=请设置参战方ID(象 GDI 或 Nod):
-AddHouseCap=添加参战方
-DeleteHouse=你确认要删除参战方 %1 吗？
-DeleteHouseCap=删除参战方
 SE2KNotInstalled=该系统未安装 SunEdit 2k
 SE2KWrongVersion=你所拥有的 SunEdit 2k 版本不支持 %9。
 SE2KRegWrong=注册表设置错误。
@@ -1311,9 +1307,15 @@ HousesPlayerControl=游戏者控制:
 HousesPrepareHouses=标准参战方
 HousesAddHouse=新建参战方
 HousesDeleteHouse=删除参战方
+AddHouse=请设置参战方ID(象 GDI 或 Nod):
+AddHouseCap=添加参战方　　
+DeleteHouse=你确认要删除参战方 %1 吗？
+DeleteHouseCap=删除参战方
 HouseAlliesCaption=敌我关系编辑器
 HouseAlliesEnemies=敌对方
 HouseAlliesAllies=友方
+HouseDeleteWarnCaption=删除确认　　
+HouseDeleteWarnTip=删除所属方会导致所有依赖所属方序号的触发和脚本出现问题，确定要删除吗？
 
 ; loading dialog
 LoadLoadRules=正在载入 rules ...
