--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1483,6 +1483,12 @@ not equal to=!= 不等于
 5 Iron curtain near ready=5 - 铁幕装置即将待命
 6 Chronosphere near ready=6 - 超时空传送即将待命
 7 Neutral owns (CONDITION) N of type X=7 - 中立方拥有N个某物体
+AITriggerEnableCaption=AI触发生效控制
+AITriggerEnableDesc=AI触发类型在单人任务地图中是默认不生效的，除非你在这里指明它会生效。多人模式或遭遇战则是默认生效的。
+AITriggerEnableAll=全部生效（推荐）
+AITriggerEnableType=AI触发类型: 
+AITriggerEnableAdd=添加
+AITriggerEnableDelete=删除
 
 ; special flags
 SpecialFlagsCaption=特殊设定
