AI trigger add dialog translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1489,6 +1489,10 @@ AITriggerEnableAll=全部生效（推荐）
 AITriggerEnableType=AI触发类型: 
 AITriggerEnableAdd=添加
 AITriggerEnableDelete=删除
+AITriggerEnableAddCaption=添加AI触发类型
+AITriggerEnableAddDesc=选择要生效的AI触发类型:
+AITriggerEnableAddOK=确定
+AITriggerEnableAddCancel=取消
 
 ; special flags
 SpecialFlagsCaption=特殊设定
