--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -300,15 +300,15 @@ BEGIN
     LTEXT           "UNDO IS NOT AVAILABLE!",IDC_STATIC,7,152,198,16
 END
 
-IDD_AITRIGGERADD DIALOG 0, 0, 222, 97
+IDD_AITRIGGERADD DIALOGEX 0, 0, 223, 292
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Enable AI Trigger"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,165,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,165,24,50,14
+    DEFPUSHBUTTON   "OK",IDOK,166,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,166,24,50,14
     LTEXT           "Select AI Trigger that should be enabled:",IDC_STATIC,7,7,136,21
-    LISTBOX         IDC_AITRIGGERS,7,48,208,42,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_AITRIGGERS,7,39,209,246,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_MYOPENDIALOG DIALOGEX 0, 0, 222, 30
@@ -1749,9 +1749,9 @@ BEGIN
     IDD_AITRIGGERADD, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 215
+        RIGHTMARGIN, 216
         TOPMARGIN, 7
-        BOTTOMMARGIN, 90
+        BOTTOMMARGIN, 285
     END
 
     IDD_MYOPENDIALOG, DIALOG
@@ -3595,6 +3595,11 @@ BEGIN
 END
 
 IDD_AITRIGGERTYPESENABLE AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_AITRIGGERADD AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
