add waypoint translated .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1443,6 +1443,13 @@ LocalVariableInitValue=初始值:
 0 - Clear=0 - 假
 1 - Set=1 - 真
 
+CreateWaypointDlgCaption=添加路径点
+CreateWaypointDlgDesc=输入一个数字以添加路径点。如果路径点已经存在了，旧的路径点会被移动到当前位置。
+CreateWaypointDlgID=ID编号:
+CreateWaypointDlgFree=帮我选一个编号
+CreateWaypointDlgOk=确定
+CreateWaypointDlgCancel=取消
+
 AITriggerCaption=AI触发编辑
 AITriggerAdd=添加
 AITriggerCopy=复制
