search waypoint dlg translation .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -1599,14 +1599,14 @@ BEGIN
     GROUPBOX        "Preview",IDC_PREVIEW,7,140,179,86
 END
 
-IDD_SEARCHWAYPOINT DIALOG 0, 0, 186, 95
+IDD_SEARCHWAYPOINT DIALOGEX 0, 0, 186, 95
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Search Waypoint"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "Search",IDOK,129,7,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
-    LTEXT           "Waypoints:",IDC_STATIC,7,7,96,12
+    LTEXT           "Waypoints:",IDC_SEARCH_WP_WP,7,7,96,12
     LISTBOX         IDC_WAYPOINTS,7,21,97,67,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
@@ -3600,6 +3600,11 @@ BEGIN
 END
 
 IDD_AITRIGGERADD AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_SEARCHWAYPOINT AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
