--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1450,6 +1450,11 @@ CreateWaypointDlgFree=帮我选一个编号
 CreateWaypointDlgOk=确定
 CreateWaypointDlgCancel=取消
 
+SearchWaypointDlgCaption=查找路径点
+SearchWaypointDlgWaypoints=所有路径点:
+SearchWaypointDlgOk=确定
+SearchWaypointDlgCancel=取消
+
 AITriggerCaption=AI触发编辑
 AITriggerAdd=添加
 AITriggerCopy=复制
