new house dialog translation .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -166,14 +166,14 @@ IDB_SCROLLCURSOR        BITMAP                  "res\\scrollcursor_ra2.bmp"
 // Dialog
 //
 
-IDD_NEWRA2HOUSE DIALOG 0, 0, 186, 52
+IDD_NEWRA2HOUSE DIALOGEX 0, 0, 186, 52
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Create new house"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,129,7,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
-    LTEXT           "Choose parent country:",IDC_STATIC,7,7,98,12
+    LTEXT           "Choose parent country:",IDC_NEWHOUSE_PARERNT,7,7,98,12
     COMBOBOX        IDC_COUNTRY,7,20,112,118,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
@@ -3605,6 +3605,11 @@ BEGIN
 END
 
 IDD_SEARCHWAYPOINT AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_NEWRA2HOUSE AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
