--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1357,6 +1357,9 @@ HouseAlliesEnemies=敌对方
 HouseAlliesAllies=友方
 HouseDuplicatedCreatingTip=地图中已经有所属方存在了，需要全部删掉才能再创建标准参战方。
 HouseDuplicatedCreatingCaption=创建标准参战方失败　　　　
+NewRA2HouseDlgCaption=添加参战方
+NewRA2HouseDlgChooseParent=从所选国家派生:
+
 
 ; loading dialog
 LoadLoadRules=正在载入 rules ...
