--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1563,6 +1563,13 @@ ScriptTypesActionDesc=说明:
 ScriptTypesSelectedTemplate=模板:
 ScriptTypesParamExtDesc=附加参数:
 
+UserScriptsDlgCaption=工具脚本
+UserScriptsDlgDesc=工具脚本执行无法撤销，强烈建议每次执行之前都先手动保存地图甚至是备份。
+UserScriptsDlgAvailable=可用脚本:
+UserScriptsDlgReport=结果报告:
+UserScriptsDlgOK=运行
+UserScriptsDlgCancel=退出
+
 ; team types
 TeamTypesCaption=小队选项
 TeamTypesTemplate=模板:
