AutoLeveler msg box translation .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -493,6 +493,8 @@ No=No
 ; YRM
 NeedsYR=This map will need Yuri''s Revenge to be played.
 
+AutoLevelerDlgDesc=This tool will try to automatically raise the terrain using the cliffs.\nIt may take some seconds to execute, as there are masses of data to handle.\nAfter this, you should check your map if everything looks fine. If not, you should use the different height tools, especially flatten ground, to fix any errors. You can use Edit->Undo to undo anything that has been done by using this function.
+
 ; name replacements
 N_AMRADR=American Air Force Command HQ
 N_SENGINEER=Soviet Engineer
@@ -1289,6 +1291,9 @@ BasicFreeRadar=无偿雷达:
 BasicInitTime=初始化时间:
 BasicAddOnNeeded=附加数据:
 
+AutoLevelerDlgDesc=该功能会自动抬高被悬崖地块包围的平地。\n地图尺寸如果不小的话耗时会达到几秒。\n操作结束之后请查看地形修改结果是否符合预期，如果效果不好可以撤销，或者试试其它功能，比如平整地块来微调修整。
+Auto Leveler=自动抬升地块    
+
 ; mapinfo dialog
 Map Properties=地图属性
 MapDesc=通用地图属性:
@@ -1569,6 +1574,7 @@ UserScriptsDlgAvailable=可用脚本:
 UserScriptsDlgReport=结果报告:
 UserScriptsDlgOK=运行
 UserScriptsDlgCancel=退出
+
 
 ; team types
 TeamTypesCaption=小队选项
